--- a/MEU PRIMEIRO PROJETO/index.html
+++ b/MEU PRIMEIRO PROJETO/index.html
@@ -8,58 +8,49 @@
 
 <body>
     <header>
-        <nav>
-            <div class="nav">
+        <nav class="nav">
+            <div class="content">
                 <div class="logo">
-                    <img class="logo-imagem" src="./img/logo.png">
+                    <img src="./img/logo.png" alt="">
                 </div>
-                <div class="nav-liks">
-                    <ul>
-                        <li><a href="#">Provedor</a>
-                            <ul>
-                                <li><a href="https:\\www.google.com.br">Backup do sistema</a></li>
-                                <li><a href="https:\\www.google.com.br">Contas bancarias</a></li>
-                            </ul>
-                        </li>
 
-                        <li>Opçoes
-                            <ul>
-                                <li><a href="#">configuraçoes de recursos</a></li>
-                            </ul>
+                <ul class="nav-lists">
+                    <li class="nav-list">Text1
+                        <ul class="nav-sub-list">
+                            <h5>Titulo</h5>
+                            <a href="#">
 
-                        </li>
+                                <li class="nav-list2">> Sub-texto</li>
+                            </a>
 
-                        <li>Clientes
-                            <ul>
-                                <li><a href="#">listas de todos clientes</a></li>
-                            </ul>
-                        </li>
+                        </ul>
+                    </li>
+                    <li class="nav-list">Text1
+                        <ul class="nav-sub-list">
+                            <h5>Titulo</h5>
+                            <a href="#">
 
-                        <li>Financeiro
-                            <ul>
-                                <li><a href="#">listas de todos clientes</a></li>
-                            </ul>
-                        </li>
-                        <li>Suporte
-                            <ul>
-                                <li><a href="#"></a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">Central</a></li>
-                        <li><a href="#">Hotsit</a></li>
-                        <li><a href="#">Relatorios</a></li>
+                                <li class="nav-list2">> Sub-texto</li>
+                            </a>
+                        </ul>
+                    </li>
 
+                    <li class="nav-list">Text1
+                        <ul class="nav-sub-list">
+                            <h5>Titulo</h5>
+                            <li class="nav-list2">>Sub-texto</li>
+                        </ul>
+                    </li>
+                </ul>
 
-                    </ul>
-                </div>
-                <div class="logo-sair">
-                    <i class="fas fa-sign-out-alt"></i>
-
+                <div class="exit">
+                    <div class="line line-1"></div>
+                    <div class="line line-2"></div>
+                    <div class="line line-3"></div>
                 </div>
             </div>
         </nav>
     </header>
-
 </body>
 
 </html>
